@@ -5,6 +5,9 @@ ubiquity (1.99.29) UNRELEASED; urgency=low
   * GTK frontend:
     - When switching language, translate other top-level widgets (dialogs)
       and their children, as well as the main notebook pages.
+  * Install a dummy initctl similar to the dummy start-stop-daemon while
+    doing anything that might install or remove packages in the target
+    system, so that attempts to control Upstart jobs won't do anything.
 
   [ Evan Dandrea ]
   * Port fix for return_to_partitioning from the GTK+ frontend to the
